# AI-Chess-Bot

./: .gitignore  Board.cpp  Board.h  BotPlayer.cpp  BotPlayer.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  MoveValidator.cpp  MoveValidator.h  OllamaClient.cpp  OllamaClient.h  Piece.h  Player.cpp  Player.h  README.md  chess_engine  chess_engine.cpp  howtorun.txt  index.html  main.cpp  server.py  test_step1.cpp  test_step2.cpp  test_step3.cpp
